Add tab fragment navigation to all spes

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -41,13 +41,7 @@
     </div>
   </div>
 
-  <div class="entity-view__navigation">
-    <div *ngIf="!addMode">
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">{{'AFFILIATE_TAB_TRACKING' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">{{'AFFILIATE_TAB_SESSION' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="setIndex(2)">{{'AFFILIATE_TAB_CAMPAIGN' | translate}}</span>
-    </div>
-  </div>
+  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
   <md-tab-group *ngIf="!addMode" [(selectedIndex)]="selectedIndex">
 
