--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -51,12 +51,7 @@
       </div>
     </div>
 
-    <div class="entity-view__navigation">
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===0" (click)="setIndex(0)">{{'CUSTOMER_TAB_GENERAL' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===1" (click)="setIndex(1)">{{'CUSTOMER_TAB_TRANSACTION' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===2" (click)="setIndex(2)">{{'CUSTOMER_TAB_SESSION' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===3" (click)="setIndex(3)">{{'CUSTOMER_TAB_FULFILLMENT' | translate}}</span>
-    </div>
+    <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
       <md-tab>
