--- a/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
+++ b/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
@@ -30,9 +30,7 @@
     </div>
   </div>
 
-  <div class="entity-view__navigation">
-    <span class="entity-view__navigation__label entity-view__navigation__label--active">{{'LOADBALANCER_TAB_GENERAL' | translate}}</span>
-  </div>
+  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
   <md-tab-group [(selectedIndex)]="selectedIndex">
     <md-tab>
