--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -15,12 +15,7 @@
     </div>
   </div>
 
-  <div class="entity-view__navigation">
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="selectedIndex = 0">{{ 'ACCOUNT_TAB_GENERAL' | translate}}</span>
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="selectedIndex = 1">{{ 'ACCOUNT_TAB_USERS' | translate}}</span>
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="selectedIndex = 2">{{ 'ACCOUNT_TAB_KEYS' | translate}}</span>
-    <span *ngIf="showBilling()" class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 3" (click)="focusBilling()">{{ 'ACCOUNT_TAB_BILLING' | translate}}</span>
-  </div>
+  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
   <md-tab-group [(selectedIndex)]="selectedIndex">
     <md-tab>
