--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -17,12 +17,7 @@
       </div>
     </div>
 
-    <div class="entity-view__navigation">
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)"> {{'CAMPAIGN_TAB_GENERAL' | translate}} </span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">{{'CAMPAIGN_TAB_PRODUCTSCHEDULES' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="setIndex(2)">{{'CAMPAIGN_TAB_AFFILIATES' | translate}}</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 3" (click)="setIndex(3)">{{'CAMPAIGN_TAB_TRACKINGCODE' | translate}}</span>
-    </div>
+    <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
       <md-tab>
