--- a/src/app/pages/bills-page/bill-view/bill-view.component.html
+++ b/src/app/pages/bills-page/bill-view/bill-view.component.html
@@ -10,7 +10,7 @@
     <div class="entity-view__info__data">
       <div class="entity-view__info__data__date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
       <div class="entity-view__info__data__name">
-        {{addMode ? ('BILL_CREATE' | translate) : entityBackup.id}}
+        {{ entityBackup.id }}
       </div>
     </div>
   </div>
