--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -74,7 +74,7 @@
           <button md-menu-item (click)="setSortBy('created_at desc')">{{'SEARCH_SORT_CREATEDESC' | translate}}</button>
           <button md-menu-item (click)="setSortBy('created_at desc')">{{'SEARCH_SORT_UPDATEASC' | translate}}</button>
           <button md-menu-item (click)="setSortBy('created_at desc')">{{'SEARCH_SORT_UPDATEDESC' | translate}}</button>
-          <button md-menu-item (click)="setSortBy('def')">{{'SEARCH_SORT_DEFAULT' | translate}}</button>
+          <button md-menu-item (click)="setSortBy('def')">{{'SEARCH_SORT_DEF' | translate}}</button>
         </md-menu>
 
         <md-input placeholder="Filter Results" [(ngModel)]="filterValue"></md-input>
