--- a/src/app/pages/users-page/user-view/user-add-new/user-add-new.component.html
+++ b/src/app/pages/users-page/user-view/user-add-new/user-add-new.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{'USER_DETAILS_TITLE' | translate}}</div>
+    <div class="entity-view__card__header__title">{{(mode === modes.Add ? 'USER_DETAILS_CREATETITLE' : 'USER_DETAILS_TITLE') | translate}}</div>
     <ng-container *ngIf="mode !== modes.Add && !!editEnabled">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
