--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -157,6 +157,6 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="4" [title]="'Customer'" [wrap]="false" [cardsExpression]="'24%;34%;42%'"></spe-loader>
+  <spe-loader [numberOfTabs]="4" [title]="'CUSTOMER_TITLE' | translate" [wrap]="false" [cardsExpression]="'24%;34%;42%'"></spe-loader>
 </ng-template>
 
