--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -70,5 +70,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [numberOfCards]="1" [title]="'Rebill'"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [numberOfCards]="1" [title]="'REBILL_TITLE' | translate"></spe-loader>
 </ng-template>
