--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -116,5 +116,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [numberOfCards]="3" [title]="'Transaction'"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [numberOfCards]="3" [title]="'TRANSACTION_TITLE' | translate"></spe-loader>
 </ng-template>
