--- a/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
+++ b/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
@@ -47,5 +47,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [cardsExpression]="'800px'" [title]="'Tracker'"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'800px'" [title]="'TRACKER_TITLE' | translate"></spe-loader>
 </ng-template>
