--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-campaigns/product-schedule-campaigns.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-campaigns/product-schedule-campaigns.component.html
@@ -1,7 +1,7 @@
 <div class="entity-view__table-component">
   <div class="entity-view__table-component__header">
     <div class="entity-view__table-component__header__title">{{'PRODUCTSCHEDULE_CAMPAIGN_TITLE' | translate}}</div>
-    <md-input class="entity-view__table-component__header__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
+    <md-input class="entity-view__table-component__header__filter" placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filterValue"></md-input>
     <table-pagination
       [limit]="limit"
       [paginationValues]="paginationValues"
