--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-rebills/state-machine-rebills.component.html
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-rebills/state-machine-rebills.component.html
@@ -1,5 +1,4 @@
-<table-memory [title]="'Bill Queue Messages'"
-              [showHeader]="false"
+<table-memory [showHeader]="false"
               [data]="entities"
               [columnParams]="columnParams"
               [dissociationEnabled]="false"
