--- a/src/app/reports/summary-report/summary-report.component.html
+++ b/src/app/reports/summary-report/summary-report.component.html
@@ -8,7 +8,7 @@
   <advanced-filter
     [date]="dateMap"
     [filterTerms]="filterTerms"
-    [refreshText]="'Refresh Report'"
+    [refreshText]="'ADVANCEDFILTER_REFRESHREPORTTEXT'"
     [shareUrl]="shareUrl"
     [groupByEnabled]="true"
     (dateChanged)="dateChanged($event)"
