--- a/src/app/shared/components/table-pagination/table-pagination.component.html
+++ b/src/app/shared/components/table-pagination/table-pagination.component.html
@@ -1,5 +1,5 @@
 <div class="entity-index__pagination__buttons">
-  <span>Rows per page : {{limit}} </span>
+  <span>{{'PAGINATION_ROWSPERPAGE' | translate}} : {{limit}} </span>
   <button md-icon-button [md-menu-trigger-for]="paginationMenu">
     <md-icon>arrow_drop_down</md-icon>
   </button>
