--- a/src/app/reports/merchant-report/merchant-report.component.html
+++ b/src/app/reports/merchant-report/merchant-report.component.html
@@ -6,7 +6,7 @@
   <advanced-filter
     [date]="dateMap"
     [filterTerms]="filterTerms"
-    [refreshText]="'Refresh Report'"
+    [refreshText]="'ADVANCEDFILTER_REFRESHREPORTTEXT'"
     [shareUrl]="shareUrl"
     [groupByEnabled]="true"
     (dateChanged)="dateChanged($event)"
