--- a/src/app/reports/subaffiliate-report/subaffiliate-report.component.html
+++ b/src/app/reports/subaffiliate-report/subaffiliate-report.component.html
@@ -4,7 +4,7 @@
   <advanced-filter
     [date]="dateMap"
     [filterTerms]="filterTerms"
-    [refreshText]="'Refresh Report'"
+    [refreshText]="'ADVANCEDFILTER_REFRESHREPORTTEXT'"
     [shareUrl]="shareUrl"
     [groupByEnabled]="true"
     (dateChanged)="dateChanged($event)"
