--- a/src/app/shared/components/error-snack-bar/error-snack-bar.component.html
+++ b/src/app/shared/components/error-snack-bar/error-snack-bar.component.html
@@ -1,5 +1,5 @@
 <div class="error-snack-bar"
      [class.error-snack-bar--error]="type === errorType"
      [class.error-snack-bar--success]="type === successType">
-  {{message || 'Error occured, please try again'}}
+  {{(message || 'SNACK_ERROR') | translate}}
 </div>
