--- a/src/app/pages/profile-page/user-signing-strings/user-signing-strings.component.html
+++ b/src/app/pages/profile-page/user-signing-strings/user-signing-strings.component.html
@@ -33,7 +33,7 @@
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'">
         {{params.mappingFunction(entity)}}
-        <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="Copy to clipboard" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
+        <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="{{'SHARE_COPY' | translate}}" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
       </td>
       <td>
         <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
