Add state engine translations

--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.html
@@ -4,7 +4,7 @@
     <div *ngIf="!queue.loaded" class="placeholder placeholder--large"></div>
 
     <div class="state-machine-details__info__title">
-      {{'ORDERENGINE_DETAILS_TITLE' | translate}} <span style="text-transform: capitalize">{{queue.label}}</span>
+      {{'ORDERENGINE_DETAILS_TITLE' | translate}} <span style="text-transform: capitalize">{{queue.labelkey | translate}}</span>
     </div>
 
     <div class="state-machine-details__info__details">
