--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.html
@@ -3,7 +3,7 @@
        [style.border-color]="queue.failureColor || 'rgba(0,0,0,0.3)'">
     <div *ngIf="!queue.loaded" class="placeholder"></div>
     <div *ngIf="queue.loaded" class="status-item__main__count">{{queue.count}}</div>
-    <div class="status-item__main__label">{{queue.label}}</div>
+    <div class="status-item__main__label">{{queue.labelkey | translate}}</div>
     <div class="status-item__main__view-link" [routerLink]="[queue.label.toLowerCase()]">{{'ORDERENGINE_STATUS_VIEW' | translate}}</div>
   </div>
 
